# chuninewbot

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  bot.example.conf  bot.example.ini  bot.py  config.example.json5  dbutils.py  docker-compose.example.yml  gradle.properties  pyproject.toml  settings.gradle.kts  update_chunirec.py  update_db.py  web.py
.github/: FUNDING.yml
.github/workflows/: deploy.yaml  test_creating_db.yaml
api/: __init__.py  consts.py  enums.py  exceptions.py  parser.py  player_data.py  record.py  utils.py
app/: build.gradle.kts
app/src/main/kotlin/nadinenathaniel/app/: App.kt
app/src/main/kotlin/nadinenathaniel/app/checks/: ChunithmNetChecks.kt
app/src/main/kotlin/nadinenathaniel/app/events/: ChunithmNetLoginEvent.kt
app/src/main/kotlin/nadinenathaniel/app/extensions/: MiscExtension.kt  WebServerExtension.kt
app/src/main/kotlin/nadinenathaniel/app/extensions/chunithm/: CNAuthExtension.kt  CNProfileExtension.kt  CNScoreExtension.kt
app/src/main/kotlin/nadinenathaniel/app/models/: HydratedChunithmScore.kt  NadineConfig.kt
app/src/main/kotlin/nadinenathaniel/app/network/: DatabaseCookieJar.kt  NetscapeCookieJar.kt
app/src/main/kotlin/nadinenathaniel/app/services/: ScoreService.kt  UserService.kt
app/src/main/kotlin/nadinenathaniel/app/util/: EmbedColors.kt  GroupScoresByCredit.kt  SnowflakeUtils.kt  ValidateLoginCookie.kt
app/src/main/resources/translations/nadine/: strings.properties
app/src/test/kotlin/nadinenathaniel/app/: MessageUtilsTest.kt
build-logic/: build.gradle.kts  settings.gradle.kts
build-logic/src/main/kotlin/: nadinenathaniel.kotlin-application-conventions.gradle.kts  nadinenathaniel.kotlin-common-conventions.gradle.kts  nadinenathaniel.kotlin-library-conventions.gradle.kts
chunithm_net/: __init__.py  _bs4.py  _httpx_hooks.py  consts.py  exceptions.py  parser.py  utils.py
chunithm_net/entities/: enums.py  record.py
chunithm_net/models/: enums.py  player_data.py  record.py  type_paired_dict.py
cogs/: __init__.py  auth.py  autocompleters.py  botutils.py  commands.py  events.py  fluff.py  gaming.py  hotreload.py  kamaitachi.py  misc.py  profile.py  records.py  search.py  tools.py
cogs/chunithm/: auth.py  kamaitachi.py  profile.py  records.py  search.py  tools.py
config/detekt/: detekt.yml
data/: build.gradle.kts
data/src/main/sqldelight/migrations/: 0.sqm
data/src/main/sqldelight/nadinenathaniel/data/: databaseVersion.sq  songs.sq  users.sq
database/: models.py  schema.sql
database/alembic/: env.py
database/alembic/versions/: 2023_08_12_1244-88a887bd5d02_make_chart_constant_and_maxcombo_nullable.py  2023_08_12_1323-e6d4f33f73d6_add_owner_id_to_aliases.py  2023_08_12_1509-50f211f12e75_make_bpm_nullable.py  2023_08_12_2217-1e5d59ce579e_convert_level_into_string.py  2023_08_14_1157-8bc93af364bc_add_extra_chart_metadata_charter_notes_.py  2023_08_15_2131-63f40487528e_add_kamaitachi_token_to_cookie_table.py  2023_08_18_0103-c475c7432a53_add_sdvxin_end_index.py  2023_09_28_2231-ac60aaf138a1_migrate_to_chunithm_id.py  2023_09_28_2306-8cd5df7f3bb4_use_international_cdn.py  2024_03_17_1312-8866455c1da9_move_jackets_to_a_different_table.py  2024_03_17_1343-901af18ec932_all_songs_are_international.py  2024_03_17_1418-50bb24f19a3a_use_a_proper_cookie_jar.py  2024_03_17_1722-9eb37ded9579_add_available_removed_flags_to_songs.py  2024_03_26_1449-f38b7c3d0930_separate_version_and_release_date.py  2024_03_26_1623-4d22bfbbe8a9_fixing_fucked_up_song_jackets_migration.py  2024_05_15_0751-4b3abcf223b6_min_bpm_and_max_bpm.py  2024_07_04_1250-d701d4d0c04b_add_chart_specific_version.py
dbutils/: __main__.py  aliases.py  chunirec.py  merge_options.py  sdvxin.py
gradle/: libs.versions.toml
kordex-extensions/: build.gradle.kts
kordex-extensions/src/main/kotlin/nadinenathaniel/kord/extensions/entity/: HybridMessage.kt
kordex-extensions/src/main/kotlin/nadinenathaniel/kord/extensions/pagination/: BaseButtonPaginator.kt  BasePaginator.kt  EphemeralButtonPaginator.kt  (+3 more)
mithra_tercera/: __init__.py  __main__.py
mithra_tercera/chunithm_net/: constants.py  models.py
mithra_tercera/cogs/: __init__.py
mithra_tercera/cogs/commands/: search.py
mithra_tercera/cogs/monitors/: events.py
mithra_tercera/cogs/player/: auth.py
mithra_tercera/config/: __init__.py  models.py
mithra_tercera/db/: __init__.py  models.py
mithra_tercera/db/services/: __init__.py  songs.py
mithra_tercera/embeds/: song_card.py
mithra_tercera/logger/: __init__.py  discord.py
mithra_tercera/utils/: difficulty.py
parsers/: build.gradle.kts
parsers/src/main/kotlin/nadinenathaniel/parsers/chunithm/: ChunithmParser.kt
parsers/src/main/kotlin/nadinenathaniel/parsers/network/: OkHttpExtensions.kt
parsers/src/main/kotlin/nadinenathaniel/parsers/util/: JsoupExtensions.kt
parsers/src/test/kotlin/nadinenathaniel/parsers/chunithm/: ChunithmParserTest.kt
parsers/src/test/resources/: best30.html  detailed_playlog.html  error_100001.html  music_record.html  playlog.html
tests/chunithm_net/: test_client.py  test_enums.py  test_utils.py
tests/chunithm_net/assets/: 100001.html  200004.html  best30.html  logged_in_homepage.html  music_record.html  music_record_by_level_folder.html  player_data.html  playlog.html  playlog_detail.html  recent10.html  stupid_way_to_redirect.html  worlds_end_music_record.html
tests/utils/calculation/: test_rating.py
utils/: __init__.py  argparse.py  config.py  constants.py  evtloop.py  help.py  logging.py  overpower_calculator.py  ranks.py  rating_calculator.py  types.py
utils/calculation/: overpower.py  rating.py
utils/components/: __init__.py  chart_card_embed.py  score_card_embed.py
utils/types/: __init__.py  annotated_records.py  errors.py
utils/views/: __init__.py  _pagination.py  b30.py  compare.py  embeds.py  gaming.py  login.py  pagination.py  profile.py  recent.py  select_to_compare.py  songlist.py
views/: b30.py  compare.py  login.py  pagination.py  profile.py  recent.py  songlist.py
(+34 files in other folders)
