[tool.poetry]
name = "chuninewbot"
version = "0.2.3"
description = ""
authors = ["beerpiss <lacvtg.a1.2023@gmail.com>"]
license = "0BSD"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.3.2"
beautifulsoup4 = "^4.11.2"
pillow = "^10.3.0"
alembic = "^1.11.3"
aiosqlite = "^0.19.0"
httpx = "^0.27.0"
rapidfuzz = "^3.6.2"
sqlalchemy = { version = "^2.0.20", extras = ["asyncio"] }
tzdata = { version = "^2023.3", markers = "sys_platform == 'win32'" }
lxml = { version = "^4.9.2", optional = true }
faust-cchardet = { version = "^2.1.19", optional = true }
aiodns = { version = "^3.0.0", optional = true }
brotli = { version = "^1.0.9", optional = true }
orjson = { version = "^3.9.5", optional = true }
uvloop = { version = "^0.17.0", optional = true, markers = "sys_platform != 'win32'" }
winloop = { version = "^0.0.8", optional = true, markers = "sys_platform == 'win32'" }
aiohttp = "^3.9.4"

[tool.poetry.extras]
speedups = [
    "faust-cchardet",
    "aiodns",
    "brotli",
    "lxml",
    "orjson",
    "uvloop",
    "winloop",
]

[tool.poetry.group.dev.dependencies]
types-beautifulsoup4 = "^4.12.0.6"
jishaku = "^2.5.1"
pre-commit = "^3.3.3"
ruff = "^0.0.291"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
typing-extensions = "^4.7.1"
basedpyright = "^1.5.0"
pytest-httpx = "^0.30.0"
pytest-html = "^4.1.1"

[tool.ruff]
select = [
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "FLY",
    "I",
    "ISC",
    "Q",
    "PERF",
    "PGH",
    "PIE",
    "PTH",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "TCH",
    "TRY",
    "TID252",
    "W",
]
ignore = ["E501"]
unfixable = ["B"]

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]
"bot.py" = ["E402"]
"chunithm_net/consts.py" = ["RUF001"]

[tool.basedpyright]
typeCheckingMode = "standard"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
