[project]
name = "chuninewbot"
version = "0.2.3"
description = "Add your description here"
authors = [{ name = "beerpiss", email = "lacvtg.a1.2023@gmail.com" }]
dependencies = [
    "discord-py>=2.4.0",
    "beautifulsoup4>=4.12.3",
    "pillow>=11.0.0",
    "alembic>=1.13.3",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.2",
    "rapidfuzz>=3.10.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "tzdata>=2024.2; sys_platform == 'win32'",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.optional-dependencies]
speedup = [
    "faust-cchardet>=2.1.19",
    "brotli>=1.1.0",
    "lxml>=5.3.0",
    "orjson>=3.10.7",
    "uvloop>=0.21.0; sys_platform != 'win32'",
    "winloop>=0.1.6; sys_platform == 'win32'",
]

[tool.rye]
managed = true
virtual = true
universal = true
lock-with-sources = true
generate-hashes = true
dev-dependencies = [
    "types-beautifulsoup4>=4.12.0.20240907",
    "typing-extensions>=4.12.2",
    "jishaku>=2.5.2",
    "ruff>=0.6.9",
    "basedpyright>=1.19.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-httpx>=0.32.0",
    "pytest-html>=4.1.1",
]

[tool.ruff]
select = [
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "FLY",
    "I",
    "ISC",
    "Q",
    "PERF",
    "PGH",
    "PIE",
    "PTH",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "TCH",
    "TRY",
    "TID252",
    "W",
]
ignore = ["E501"]
unfixable = ["B"]

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]
"bot.py" = ["E402"]
"chunithm_net/consts.py" = ["RUF001"]

[tool.basedpyright]
typeCheckingMode = "standard"
